--- a/Readme
+++ b/Readme
@@ -8,3 +8,5 @@ node app.js
 
 en el navegador entrar a la URL: 127.0.0.1:8080
 
+En la carpeta DOCS se encuentra el informe de la materia Técnicas de prueba de Software
+
