--- a/Readme
+++ b/Readme
@@ -1,12 +1,18 @@
 Este proyecto es creado en NodeJS,
 Es requerido tener MongoDB para el manejo de la base de datos
 Debe iniciar el servidor de BD(mongod)
-
 Para iniciar debe ir a la carpeta del proyecto y ejecutar
 
-node app.js
+	node app.js
 
 en el navegador entrar a la URL: 127.0.0.1:8080
-
 En la carpeta DOCS se encuentra el informe de la materia Técnicas de prueba de Software
+Para ejecutar las pruebas automáticas en NightWatch debe ejecutar
+
+	java -jar <path>/selenium-server-standalone-2.46.0.jar
+
+Para crear las pruebas, se crean los archivos en javascript y se guardan en la carpeta test
+ejecute 
+	
+	nightwatch --test /test/nombreArchivo.js
 
